--- a/Back-end/habits/Dockerfile
+++ b/Back-end/habits/Dockerfile
@@ -1,4 +1,17 @@
-FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
-COPY target/app.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM eclipse-temurin:17-jdk as builder
+
+WORKDIR /app
+
+COPY . .
+
+RUN ./mvnw package -DskipTests
+
+FROM eclipse-temurin:17-jre
+
+WORKDIR /app
+
+COPY --from=builder /app/target/*.jar app.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
