--- a/Back-end/habits/src/main/resources/application.properties
+++ b/Back-end/habits/src/main/resources/application.properties
@@ -1,13 +1,13 @@
+server.port=8080
+server.address=0.0.0.0
+
 spring.application.name=upstreak
-spring.datasource.url=jdbc:postgresql://localhost:5432/upstreak
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.datasource.url=jdbc:postgresql://upstreak-db.flycast:5432/postgres?sslmode=disable
 spring.datasource.username=postgres
-spring.datasource.password=040906
+spring.datasource.password=rM9LjHSVnslYypm
 spring.datasource.driver-class-name=org.postgresql.Driver
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
-logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-logging.level.com.upstreak.habits=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
